--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "2.7.94" !default;
+$mdi-version:          "2.8.94" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -28,6 +28,7 @@ $mdi-icons: (
     "account-key": F00B,
     "account-location": F00C,
     "account-minus": F00D,
+    "account-minus-outline": FAEB,
     "account-multiple": F00E,
     "account-multiple-check": F8C4,
     "account-multiple-minus": F5D3,
@@ -40,6 +41,7 @@ $mdi-icons: (
     "account-plus": F014,
     "account-plus-outline": F800,
     "account-remove": F015,
+    "account-remove-outline": FAEC,
     "account-search": F016,
     "account-search-outline": F934,
     "account-settings": F630,
@@ -78,6 +80,58 @@ $mdi-icons: (
     "alien": F899,
     "all-inclusive": F6BD,
     "alpha": F02B,
+    "alpha-a": 0041,
+    "alpha-a-box": FAED,
+    "alpha-b": 0042,
+    "alpha-b-box": FAEE,
+    "alpha-c": 0043,
+    "alpha-c-box": FAEF,
+    "alpha-d": 0044,
+    "alpha-d-box": FAF0,
+    "alpha-e": 0045,
+    "alpha-e-box": FAF1,
+    "alpha-f": 0046,
+    "alpha-f-box": FAF2,
+    "alpha-g": 0047,
+    "alpha-g-box": FAF3,
+    "alpha-h": 0048,
+    "alpha-h-box": FAF4,
+    "alpha-i": 0049,
+    "alpha-i-box": FAF5,
+    "alpha-j": 004A,
+    "alpha-j-box": FAF6,
+    "alpha-k": 004B,
+    "alpha-k-box": FAF7,
+    "alpha-l": 004C,
+    "alpha-l-box": FAF8,
+    "alpha-m": 004D,
+    "alpha-m-box": FAF9,
+    "alpha-n": 004E,
+    "alpha-n-box": FAFA,
+    "alpha-o": 004F,
+    "alpha-o-box": FAFB,
+    "alpha-p": 0050,
+    "alpha-p-box": FAFC,
+    "alpha-q": 0051,
+    "alpha-q-box": FAFD,
+    "alpha-r": 0052,
+    "alpha-r-box": FAFE,
+    "alpha-s": 0053,
+    "alpha-s-box": FAFF,
+    "alpha-t": 0054,
+    "alpha-t-box": FB00,
+    "alpha-u": 0055,
+    "alpha-u-box": FB01,
+    "alpha-v": 0056,
+    "alpha-v-box": FB02,
+    "alpha-w": 0057,
+    "alpha-w-box": FB03,
+    "alpha-x": 0058,
+    "alpha-x-box": FB04,
+    "alpha-y": 0059,
+    "alpha-y-box": FB05,
+    "alpha-z": 005A,
+    "alpha-z-box": FB06,
     "alphabetical": F02C,
     "altimeter": F5D7,
     "amazon": F02D,
@@ -429,8 +483,10 @@ $mdi-icons: (
     "bug-check": FA2D,
     "bug-check-outline": FA2E,
     "bug-outline": FA2F,
+    "bulldozer": FB07,
     "bulletin-board": F0E5,
     "bullhorn": F0E6,
+    "bullhorn-outline": FB08,
     "bullseye": F5DD,
     "bullseye-arrow": F8C8,
     "bus": F0E7,
@@ -453,7 +509,9 @@ $mdi-icons: (
     "calendar-check": F0EF,
     "calendar-clock": F0F0,
     "calendar-edit": F8A6,
+    "calendar-export": FB09,
     "calendar-heart": F9D1,
+    "calendar-import": FB0A,
     "calendar-multiple": F0F1,
     "calendar-multiple-check": F0F2,
     "calendar-multiselect": FA31,
@@ -615,15 +673,23 @@ $mdi-icons: (
     "chevron-down": F140,
     "chevron-down-box": F9D5,
     "chevron-down-box-outline": F9D6,
+    "chevron-down-circle": FB0B,
+    "chevron-down-circle-outline": FB0C,
     "chevron-left": F141,
     "chevron-left-box": F9D7,
     "chevron-left-box-outline": F9D8,
+    "chevron-left-circle": FB0D,
+    "chevron-left-circle-outline": FB0E,
     "chevron-right": F142,
     "chevron-right-box": F9D9,
     "chevron-right-box-outline": F9DA,
+    "chevron-right-circle": FB0F,
+    "chevron-right-circle-outline": FB10,
     "chevron-up": F143,
     "chevron-up-box": F9DB,
     "chevron-up-box-outline": F9DC,
+    "chevron-up-circle": FB11,
+    "chevron-up-circle-outline": FB12,
     "chili-hot": F7B1,
     "chili-medium": F7B2,
     "chili-mild": F7B3,
@@ -772,6 +838,7 @@ $mdi-icons: (
     "content-save-all": F194,
     "content-save-outline": F817,
     "content-save-settings": F61B,
+    "content-save-settings-outline": FB13,
     "contrast": F195,
     "contrast-box": F196,
     "contrast-circle": F197,
@@ -800,6 +867,7 @@ $mdi-icons: (
     "crosshairs-gps": F1A4,
     "crown": F1A5,
     "cryengine": F958,
+    "crystal-ball": FB14,
     "cube": F1A6,
     "cube-outline": F1A7,
     "cube-send": F1A8,
@@ -966,6 +1034,7 @@ $mdi-icons: (
     "email-search": F960,
     "email-search-outline": F961,
     "email-variant": F5F0,
+    "ember": FB15,
     "emby": F6B3,
     "emoticon": F1F2,
     "emoticon-cool": F1F3,
@@ -1018,6 +1087,7 @@ $mdi-icons: (
     "facebook": F20C,
     "facebook-box": F20D,
     "facebook-messenger": F20E,
+    "facebook-workplace": FB16,
     "factory": F20F,
     "fan": F210,
     "fan-off": F81C,
@@ -1067,6 +1137,8 @@ $mdi-icons: (
     "file-powerpoint-box": F228,
     "file-presentation-box": F229,
     "file-question": F86E,
+    "file-replace": FB17,
+    "file-replace-outline": FB18,
     "file-restore": F670,
     "file-send": F22A,
     "file-tree": F645,
@@ -1195,6 +1267,9 @@ $mdi-icons: (
     "format-indent-decrease": F275,
     "format-indent-increase": F276,
     "format-italic": F277,
+    "format-letter-case": FB19,
+    "format-letter-case-lower": FB1A,
+    "format-letter-case-upper": FB1B,
     "format-line-spacing": F278,
     "format-line-style": F5C8,
     "format-line-weight": F5C9,
@@ -1544,6 +1619,7 @@ $mdi-icons: (
     "language-css3": F31C,
     "language-go": F7D2,
     "language-html5": F31D,
+    "language-java": FB1C,
     "language-javascript": F31E,
     "language-lua": F8B0,
     "language-php": F31F,
@@ -1621,6 +1697,7 @@ $mdi-icons: (
     "loop": F6EA,
     "loupe": F345,
     "lumx": F346,
+    "lyft": FB1D,
     "magnet": F347,
     "magnet-on": F348,
     "magnify": F349,
@@ -1803,33 +1880,43 @@ $mdi-icons: (
     "nuke": F6A3,
     "null": F7E1,
     "numeric": F3A0,
+    "numeric-0": 0030,
     "numeric-0-box": F3A1,
     "numeric-0-box-multiple-outline": F3A2,
     "numeric-0-box-outline": F3A3,
+    "numeric-1": 0031,
     "numeric-1-box": F3A4,
     "numeric-1-box-multiple-outline": F3A5,
     "numeric-1-box-outline": F3A6,
+    "numeric-2": 0032,
     "numeric-2-box": F3A7,
     "numeric-2-box-multiple-outline": F3A8,
     "numeric-2-box-outline": F3A9,
+    "numeric-3": 0033,
     "numeric-3-box": F3AA,
     "numeric-3-box-multiple-outline": F3AB,
     "numeric-3-box-outline": F3AC,
+    "numeric-4": 0034,
     "numeric-4-box": F3AD,
     "numeric-4-box-multiple-outline": F3AE,
     "numeric-4-box-outline": F3AF,
+    "numeric-5": 0035,
     "numeric-5-box": F3B0,
     "numeric-5-box-multiple-outline": F3B1,
     "numeric-5-box-outline": F3B2,
+    "numeric-6": 0036,
     "numeric-6-box": F3B3,
     "numeric-6-box-multiple-outline": F3B4,
     "numeric-6-box-outline": F3B5,
+    "numeric-7": 0037,
     "numeric-7-box": F3B6,
     "numeric-7-box-multiple-outline": F3B7,
     "numeric-7-box-outline": F3B8,
+    "numeric-8": 0038,
     "numeric-8-box": F3B9,
     "numeric-8-box-multiple-outline": F3BA,
     "numeric-8-box-outline": F3BB,
+    "numeric-9": 0039,
     "numeric-9-box": F3BC,
     "numeric-9-box-multiple-outline": F3BD,
     "numeric-9-box-outline": F3BE,
@@ -1858,6 +1945,7 @@ $mdi-icons: (
     "openid": F3CD,
     "opera": F3CE,
     "orbit": F018,
+    "origin": FB2B,
     "ornament": F3CF,
     "ornament-variant": F3D0,
     "owl": F3D2,
@@ -2094,6 +2182,8 @@ $mdi-icons: (
     "reply": F45A,
     "reply-all": F45B,
     "reproduction": F45C,
+    "resistor": FB1F,
+    "resistor-nodes": FB20,
     "resize": FA67,
     "resize-bottom-right": F45D,
     "responsive": F45E,
@@ -2112,6 +2202,7 @@ $mdi-icons: (
     "road": F461,
     "road-variant": F462,
     "robot": F6A8,
+    "robot-industrial": FB21,
     "robot-vacuum": F70C,
     "robot-vacuum-variant": F907,
     "rocket": F463,
@@ -2221,6 +2312,8 @@ $mdi-icons: (
     "shield-remove": FADB,
     "shield-remove-outline": FADC,
     "ship-wheel": F832,
+    "shoe-formal": FB22,
+    "shoe-heel": FB23,
     "shopify": FADD,
     "shopping": F49A,
     "shopping-music": F49B,
@@ -2250,6 +2343,7 @@ $mdi-icons: (
     "signal-hspa-plus": F715,
     "signal-off": F782,
     "signal-variant": F60A,
+    "silo": FB24,
     "silverware": F4A3,
     "silverware-fork": F4A4,
     "silverware-fork-knife": FA6F,
@@ -2365,6 +2459,7 @@ $mdi-icons: (
     "store": F4DC,
     "store-24-hour": F4DD,
     "stove": F4DE,
+    "strava": FB25,
     "subdirectory-arrow-left": F60C,
     "subdirectory-arrow-right": F60D,
     "subtitles": FA15,
@@ -2392,7 +2487,9 @@ $mdi-icons: (
     "sync-alert": F4E7,
     "sync-off": F4E8,
     "tab": F4E9,
+    "tab-minus": FB26,
     "tab-plus": F75B,
+    "tab-remove": FB27,
     "tab-unselected": F4EA,
     "table": F4EB,
     "table-border": FA17,
@@ -2428,12 +2525,14 @@ $mdi-icons: (
     "tag-plus": F721,
     "tag-remove": F722,
     "tag-text-outline": F4FD,
+    "tape-measure": FB28,
     "target": F4FE,
     "target-variant": FA76,
     "taxi": F4FF,
     "teach": F88F,
     "teamviewer": F500,
     "telegram": F501,
+    "telescope": FB29,
     "television": F502,
     "television-box": F838,
     "television-classic": F7F3,
@@ -2778,6 +2877,7 @@ $mdi-icons: (
     "xing-circle": F5BF,
     "xml": F5C0,
     "xmpp": F7FE,
+    "yahoo": FB2A,
     "yammer": F788,
     "yeast": F5C1,
     "yelp": F5C2,
