--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,8 @@
-$mdi-filename:         "andes-font";
-$mdi-font-name:        "Andes Icons";
-$mdi-font-family:      "andesicons";
-$mdi-font-weight:      "regular";
-$mdi-font-path:        "../fonts" !default;
-$mdi-font-size-base:   24px !default;
-$mdi-css-prefix:       adi !default;
-$mdi-version:          "1.0.0" !default;
+$adi-filename:         "andes-font";
+$adi-font-name:        "Andes Icons";
+$adi-font-family:      "andesicons";
+$adi-font-weight:      "regular";
+$adi-font-path:        "../fonts" !default;
+$adi-font-size-base:   24px !default;
+$adi-css-prefix:       adi !default;
+$adi-version:          "1.0.0" !default;
