--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -1,10 +1,10 @@
-@each $key, $value in $mdi-icons {
-    .#{$mdi-css-prefix}-#{$key}:before {
+@each $key, $value in $adi-icons {
+    .#{$adi-css-prefix}-#{$key}:before {
         content: char($value);
     }
 }
 
-.#{$mdi-css-prefix}-blank:before {
+.#{$adi-css-prefix}-blank:before {
     content: "\F68C";
     visibility: hidden;
 }
