--- a/scss/_path.scss
+++ b/scss/_path.scss
@@ -1,11 +1,11 @@
 @font-face {
-  font-family: '#{$mdi-font-name}';
-  src: url('#{$mdi-font-path}/#{$mdi-filename}.eot?v=#{$mdi-version}');
-  src: url('#{$mdi-font-path}/#{$mdi-filename}.eot?#iefix&v=#{$mdi-version}') format('embedded-opentype'),
-    // url('#{$mdi-font-path}/#{$mdi-filename}.woff2?v=#{$mdi-version}') format('woff2'),
-    url('#{$mdi-font-path}/#{$mdi-filename}.woff?v=#{$mdi-version}') format('woff'),
-    url('#{$mdi-font-path}/#{$mdi-filename}.ttf?v=#{$mdi-version}') format('truetype'),
-    url('#{$mdi-font-path}/#{$mdi-filename}.svg?v=#{$mdi-version}##{$mdi-filename}#{$mdi-font-weight}') format('svg');
+  font-family: '#{$adi-font-name}';
+  src: url('#{$adi-font-path}/#{$adi-filename}.eot?v=#{$adi-version}');
+  src: url('#{$adi-font-path}/#{$adi-filename}.eot?#iefix&v=#{$adi-version}') format('embedded-opentype'),
+    // url('#{$adi-font-path}/#{$adi-filename}.woff2?v=#{$adi-version}') format('woff2'),
+    url('#{$adi-font-path}/#{$adi-filename}.woff?v=#{$adi-version}') format('woff'),
+    url('#{$adi-font-path}/#{$adi-filename}.ttf?v=#{$adi-version}') format('truetype'),
+    url('#{$adi-font-path}/#{$adi-filename}.svg?v=#{$adi-version}##{$adi-filename}#{$adi-font-weight}') format('svg');
   font-weight: normal;
   font-style: normal;
 }
